Preserve null template steps in config model